bad/return_class_in_func_returning_void.example_compiler_output
ERROR
[1mbad/return_class_in_func_returning_void.lat:5:22: [1;31merror: [0;1mreturned value of type `Y` is not convertible to return type `void`[m
void test() { return new Y; }
                     [1;32m^[m
